Исправлены небольшие косяки, которые нашёл пока делал укороченную версию для НКР.

--- a/Dissertation/partAllocation.tex
+++ b/Dissertation/partAllocation.tex
@@ -691,7 +691,7 @@
 \begin{equation*}
     P = \sum_{i=1}^p k_i t_i^{3/2}
 \end{equation*}
-\noindent где $k_i$ -- некоторые коэффициенты.
+\noindent где $k_i$ -- коэффициенты аппроксимации нелинейной зависимости потребляемой мощности от формируемого упора движителя.
 
 % \begin{notequestion}
 % 	Сущность этих коэффициентов и их численное значение для сравнительного анализа не важны
