--- a/Dissertation/partStatement.tex
+++ b/Dissertation/partStatement.tex
@@ -292,12 +292,10 @@
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item изучить математические модели исполнительных механизмов (маршевые движители, подруливающие движители, рули управления) ДРК подводного аппарата учитывающие особенности их работы в набегающем потоке;
-  \item разработать метод формального описания, анализа и реконфигурации в режиме реального времени ДРК, оснащенного произвольным набором исполнительных механизмов;
-  \item разработать и реализовать метод определения скорости набегающего потока по параметрам работы электроприводов маршевых движителей;
-  \item разработать и реализовать энергетически оптимальный отказоустойчивый метод управления ДРК для АНПА устойчивый к неполному знанию скорости набегающего потока;
-  \item разработать и реализовать метод плавного управления ДРК при переходах между различными типами движения;
-  \item провести проверку эффективности разработанного метода управления ДРК на базе модельных экспериментов.
+  \item Изучить модели описания исполнительных механизмов (маршевые движители, подруливающие движители, рули управления) ДРК подводного аппарата учитывающие особенности их работы в набегающем потоке;
+  \item Разработать и реализовать метод оценки скорости движения ПА относительно набегающего потока по параметрам работы электроприводов маршевых движителей;
+  \item Разработать и реализовать энергетически оптимальный метод управления ДРК для АНПА адаптивный к различным типам движения ПА;
+  \item Провести проверку эффективности разработанного метода управления ДРК на базе модельных экспериментов.
 \end{enumerate}
 
 \section{Выводы по главе 1}\label{sec:Statement/Conclusion}
