--- a/Dissertation/partVelocity.tex
+++ b/Dissertation/partVelocity.tex
@@ -29,7 +29,7 @@
 Более подробно параметр $w$ представлен в работе \cite{10.1016/s1474-6670-17-46514-1} которая опирается лекционные заметки \cite{walderhaug1992motstand}:
 
 \begin{equation*}
-    v_a = (1-w)u = (1 - w_w - w_p - w_v)v
+    v_a = (1-w)v = (1 - w_w - w_p - w_v)v
 \end{equation*}
 \noindent где
 \begin{itemize}
@@ -81,7 +81,7 @@
 Тогда формула для расчета скорости по параметрам работы движителя будет записана следующим образом:
 \begin{equation}
     \label{eq:velocity_final}
-    u = \frac{1}{\beta_1} \left( K_Q^{bp} n D - K_m\frac{I}{\rho D^4|n|n} \right)
+    v = \frac{1}{\beta_1} \left( K_Q^{bp} n D - K_m\frac{I}{\rho D^4|n|n} \right)
 \end{equation}
 
 \section{Учёт пространственной ориентации маршевых движителей при оценке скорости набегающего потока}
@@ -102,12 +102,12 @@
 В таком случае расчет скорости набегающего потока на АНПА будет следующим:
 \begin{equation}
     \label{eq:velocity_orientation}
-    u^i = \frac{u^i_t}{\cos{\psi^i_t}\cos{\theta^i_t}}
+    v^i = \frac{v^i_t}{\cos{\psi^i_t}\cos{\theta^i_t}}
 \end{equation}
 \noindent где
 \begin{itemize}
-    \item $u^i$ -- скорость набегающего потока на АНПА, т.е. это определяет скорость движения АНПА относительно воды;
-    \item $u^i_t$ -- скорость набегающего потока на движитель $i$;
+    \item $v^i$ -- скорость набегающего потока на АНПА, т.е. это определяет скорость движения АНПА относительно воды;
+    \item $v^i_t$ -- скорость набегающего потока на движитель $i$;
     \item $\psi^i_t$ -- отклонение движителя от продольной оси аппарата в горизонтальной плоскости;
     \item $\theta^i_t$ -- отклонение движителя от продольной оси аппарата в вертикальной плоскости плоскости;
 \end{itemize}
