Сделано всё что бы генерировать научный доклад по образу автореферата.

--- a/Synopsis/content.tex
+++ b/Synopsis/content.tex
@@ -4,6 +4,8 @@
 \newcommand{\actuality}{\pdfbookmark[1]{Актуальность}{actuality}\underline{\textbf{\actualityTXT}}}
 \newcommand{\progress}{\pdfbookmark[1]{Разработанность темы}{progress}\underline{\textbf{\progressTXT}}}
 \newcommand{\aim}{\pdfbookmark[1]{Цели}{aim}\underline{{\textbf\aimTXT}}}
+\newcommand{\object}{\pdfbookmark[1]{Объект исследования}{object}\underline{\textbf{\objectTXT}}}
+\newcommand{\subject}{\pdfbookmark[1]{Предмет исследования}{subject}\underline{\textbf{\subjectTXT}}}
 \newcommand{\tasks}{\pdfbookmark[1]{Задачи}{tasks}\underline{\textbf{\tasksTXT}}}
 \newcommand{\aimtasks}{\pdfbookmark[1]{Цели и задачи}{aimtasks}\aimtasksTXT}
 \newcommand{\novelty}{\pdfbookmark[1]{Научная новизна}{novelty}\underline{\textbf{\noveltyTXT}}}
@@ -14,6 +16,21 @@
 \newcommand{\probation}{\pdfbookmark[1]{Апробация}{probation}\underline{\textbf{\probationTXT}}}
 \newcommand{\contribution}{\pdfbookmark[1]{Личный вклад}{contribution}\underline{\textbf{\contributionTXT}}}
 \newcommand{\publications}{\pdfbookmark[1]{Публикации}{publications}\underline{\textbf{\publicationsTXT}}}
+
+    \nocite{костенко2020исследование}%
+    \nocite{костенко2020методы}%
+    \nocite{костенко2017оценка}%
+    \nocite{костенко2019задача}%
+    %
+    %% authorscopus
+    \nocite{kostenko2021comparative}%
+    \nocite{tolstonogov2017auv}
+    %
+    %% authorconf
+    \nocite{костенко2020анализ}%
+    \nocite{костенко2019разработка}%
+    \nocite{костенко2019особенности}%
+    \nocite{костенко2017разработка}%
 
 \input{common/characteristic} % Характеристика работы по структуре во введении и в автореферате не отличается (ГОСТ Р 7.0.11, пункты 5.3.1 и 9.2.1), потому её загружаем из одного и того же внешнего файла, предварительно задав форму выделения некоторым параметрам
 
@@ -26,49 +43,193 @@
 
 \pdfbookmark{Содержание работы}{description}                          % Закладка pdf
 \section*{Содержание работы}
+
 Во \underline{\textbf{введении}} обосновывается актуальность
-исследований, проводимых в~рамках данной диссертационной работы,
+исследований, проводимых в~рамках данной научно-квалификационной работы,
 приводится обзор научной литературы по~изучаемой проблеме,
 формулируется цель, ставятся задачи работы, излагается научная новизна
-и практическая значимость представляемой работы. В~последующих главах
-сначала описывается общий принцип, позволяющий \dots, а~потом идёт
-апробация на частных примерах: \dots  и~\dots.
+и практическая значимость представляемой работы.
 
 
-\underline{\textbf{Первая глава}} посвящена \dots
+\underline{\textbf{Первая глава}} посвящена обзору современных методов и подходов к решению задачи энергоэффективного управления ДРК.
 
-картинку можно добавить так:
+Отмечено, что хоть тема достаточно проработана, но в работах почти никак не фигурируют гидродинамические особенности работы исполнительных механизмов в набегающем потоке и уменьшение их результирующей силы.
+
+Во \underline{\textbf{второй главе}} приведены математические модели исполнительных механизмов (маршевые движители, подруливающие движители, рули управления) ДРК ПА учитывающие особенности их работы в набегающем потоке.
+Показано, что эффективность работы ИМ существенным образом зависят от скорости набегающего потока. 
+Приведены результаты численного моделирования работы ИМ.
+
+Отдельное внимание в главе уделено поведению подруливающих движителей в набегающем потоке.
+Показано что эффективный упор создаваемый подруливающими движителями падает экспоненциально и для представленных в главе параметров подруливающего ИМ падает до около нулевых значений при скорости набегающего потока 1.5 м/с.
+
+В работах на которые автор ссылается показано, что падение эффективности подруливающего движителя связано не с уменьшением эффективности самого устройства, а с взаимодействием пропульсивной струи, которую создает подруливающий движитель, с набегающим на ПА потоком.
+
+Работа подруливающего движителя ПА при отсутствии поперечного потока полностью эквивалентна модели маршевого движителя, т.е. на аппарат действует определенная сила (упор) приложенная к точке крепления движителя за счет формирования пропульсивной струи ПА.
+Но в случае, когда ПА движется с продольной скоростью $u$, то пропульсивная струя формируемая подруливающим движителем формирует гидродинамическую тень (на рисунке закрашена серым цветом) на корпусе ПА в области за подруливающей шахтой (рисунок 1).
+За счет этого формируется разность давлений между различными областями ПА, которая, в свою очередь, формирует силу $T_S$ обратную по направлению к силе создаваемой подруливающим движителем $T_T$.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.6\linewidth]{modelling/Моделирование - подруливающий движитель силы.png}
+    \caption*{Рис 1. -- Особенности поведения подруливающего движителя в набегающем потоке.}
+    \label{fig:modelling-tunnel}
+\end{figure}
+
+При низких и средних скоростях продольного движения ПА, когда формируемая подруливающим движителем скорость пропульсивной струи существенно выше скорости АНПА наклон струи незначителен, гидродинамическая тень мала и соответственно мала и сила создаваемая разностью давлений на корпус ПА.
+При высоких скоростях движения ПА, когда скорость набегаемого на АПНА потока сопоставима или выше по скорости чем скорость создаваемой подруливающим движителем пропульсивной струи, её наклон существенно выше, как и создаваемая гидродинамическая тень и общая эффективность подруливающего движителя падает значительно.
+
+В работе \cite{palmer2009analysis} предложено силу формируемую разностью давлений представлять следующим образом:
+\begin{equation}
+    \label{eq:thrust_tunnel}
+    T_S = T_T (1 - \exp \left[ -c \left( \frac{u}{u_j} \right)^2 \right])
+\end{equation}
+\noindent где
+\begin{itemize}
+    \item $T_S$ -- сила действующая на аппарат в связи с разностью давлений;
+    \item $T_T$ -- упор создаваемый подруливающим движителем;
+    \item $u$ -- скорость набегающего потока;
+    \item $u_j$ -- скорость пропульстивной струи;
+    \item $c$ -- коэффициент подавления упора.
+\end{itemize}
+
+В свою очередь скорость пропульсивной струи, создаваемой работой подруливающего движителя, может быть определена следующим уравнением:
+\begin{equation}
+    \label{eq:jetflow_speed}
+    u_j = \sqrt{\frac{T_T(v=0)}{\rho A}}
+\end{equation}
+\noindent где $T_T(v=0)$ -- упор создаваемый подруливающим движителем в отсутствии набегающего потока, $\rho$ -- плотность воды, $A=\pi R^2$, где $R$ -- радиус гребного винта подруливающего движителя.
+
+В главе так же представлены результаты численного моделирования влияния набегающего потока на величину сил и моментов создаваемых различными типами исполнительных механизмов (рисунок 2).
+
 \begin{figure}[ht]
     \centerfloat{
         \hfill
-        \subcaptionbox{\LaTeX}{%
-            \includegraphics[scale=0.27]{latex}}
+        \subcaptionbox{Подруливающий движитель}{%
+            \includegraphics[width=0.5\linewidth]{modelling/Моделирование - подруливающий движитель скорость.png}}
         \hfill
-        \subcaptionbox{Knuth}{%
-            \includegraphics[width=0.25\linewidth]{knuth1}}
+        \subcaptionbox{Маршевый движитель}{%
+            \includegraphics[width=0.5\linewidth]{modelling/Моделирование - маршевый движитель скорость.png}}
         \hfill
     }
-    \caption{Подпись к картинке.}\label{fig:latex}
+    \caption*{Рис. 2 -- Численное моделирование установившегося эффективного упора создаваемого ИМ при различных скоростях набегающего потока.}\label{fig:latex}
 \end{figure}
 
-Формулы в строку без номера добавляются так:
-\[
-    \lambda_{T_s} = K_x\frac{d{x}}{d{T_s}}, \qquad
-    \lambda_{q_s} = K_x\frac{d{x}}{d{q_s}},
-\]
 
-\underline{\textbf{Вторая глава}} посвящена исследованию
+Содержимое \underline{\textbf{третьей главы}} посвящено разработке метода оценки скорости набегающего потока в установившемся режиме движения АНПА по изменению параметров работы движителей маршевой группы.
+Оценка скорости набегающего потока была получена на основе линеаризации в ограниченных пределеах коэффициентов упора и момента гребного винта $K_T (J_0), K_Q (J_0)$:
+\begin{gather}
+    K_T = K_T^{bp} - \alpha_1 J_0 \notag \\
+    K_Q = K_Q^{bp} - \beta_1 J_0 \label{eq:torque_linear}
+\end{gather}
+\noindent где $K_T^{bp}, K_Q^{bp}$ -- коэффициенты упора и момента гребного винта полученные в результате швартовых испытаний движителя, а в свою очередь, а $J_0$ -- относительная поступь определяемая следующим образом:
+\begin{equation*}
+    J_0 = \frac{v}{nD}
+\end{equation*}
+\noindent где $v$ -- скорость набегающего потока, $n$ -- скорость вращения вала, $D$ -- диаметр винта.
 
-\underline{\textbf{Третья глава}} посвящена исследованию
+Из этих уравнений и на основе математической модели электрического привода движителя можно оценить скорость набегающего потока следующим образом:
+\begin{equation}
+    \label{eq:velocity_final}
+    v = \frac{1}{\beta_1} \left( K_Q^{bp} n D - K_m\frac{I}{\rho D^4|n|n} \right)
+\end{equation}
+\noindent где $K_m$ -- постоянная момента электропривода, а $I$ -- ток на его обмотках.
 
-Можно сослаться на свои работы в автореферате. Для этого в файле
-\verb!Synopsis/setup.tex! необходимо присвоить положительное значение
-счётчику \verb!\setcounter{usefootcite}{1}!. В таком случае ссылки на
-работы других авторов будут подстрочными.
-Изложенные в третьей главе результаты опубликованы в~\cite{vakbib1, vakbib2}.
-Использование подстрочных ссылок внутри таблиц может вызывать проблемы.
+Была проведена верификация метода на обработке данных запусков АНПА ``ММТ-3000'' в заливе Патрокл.
+После уточнения параметров ГВ на калибровочной части маршрута, расхождение оцениваемой скорости с эталонными показаниями доплеровского лага составило не более чем 0.18 м/с на переходных режимах и не более чем 0.1 м/с на установившихся режимах движения со среднеквадратичным отклонением $\sigma=0.17$ м/с (рисунок 3).
 
-В \underline{\textbf{четвертой главе}} приведено описание
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.6\linewidth]{velocity/ММТ3000 - тестирование b2.png}
+    \caption* {Рис. 3 -- Cкорость продольного движения АНПА ``ММТ-3000'' по данным доплеровского лага и по оценке с движителей.}
+    \label{fig:mmt3000_velocity_check}
+\end{figure}
+
+В \underline{\textbf{четвертой главе}} предложен новый алгоритм энергоэффективного управления ДРК подводного аппарата в условиях ограничений накладываемых на работу исполнительных механизмов, который учитывает особенности работы ИМ ДРК в набегающем потоке и способен адаптивно перераспределять управляющие воздействия при вариациях скорости.
+
+Пусть функционал энергоэффективного управления ДРК $J(\vect{u})$, где $\vect{u}$ -- вектор команд управления ИМ ДРК, задаётся в квадратичной форме и имеет следующий вид \cite{burken2001two}:
+\begin{equation}
+    \label{eq:functional_weight}
+    J = (1-\varepsilon)(BK(v)\vect{u} - \vect{\nu})^TQ_{\nu}(BK(v)\vect{u} - \vect{\nu}) + \varepsilon 
+    \vect{u}^TQ_{u}\vect{u}
+\end{equation}
+\noindent где
+\begin{itemize}
+    \item $v$ -- скорость набегающего потока,
+    \item $\vect{\nu}$ -- целевая команда управления АНПА,
+    \item $\varepsilon$ -- весовой коэффициент отклика системы на управление, $0 < \varepsilon < 1$;
+    \item $Q_{\nu}$ -- диагональная матрица положительно определенных весовых коэффициентов осей управления;
+    \item $Q_{u}$ -- диагональная матрица положительно определенных весовых коэффициентов ИМ;
+    \item $K(v)$ -- матрица коэффициентов поведения ИМ в потоке, детальное описание которой приведено в работе.
+\end{itemize}
+
+Для решения задачи поиска оптимального решения по заданному функционалу было использовано итерационное глобально-сходящееся решение следующего вида:
+\begin{equation}
+    \label{eq:Allocation/FixedMethod}
+    \vect{u}_{n+1} = \text{sat}
+    \left[
+    (1-\varepsilon)\omega (BK(v))^TQ_{\nu}\nu - (\omega H - I) \vect{u}_{n}
+    \right]
+\end{equation}
+\noindent где
+\begin{itemize}
+    \item $H=(1 - \varepsilon)(BK(v))^TQ_{\nu}B + \varepsilon Q_u$;
+    \item $\omega = 1 / ||H||_2$, где $||\cdot||_2$ -- норма оператора в $L_2$;
+    \item $I$ -- диагональная единичная матрица;
+    \item $\vect{u}_{n+1}$ -- вектор управления ДРК на $n+1$ шаге итерационного расчёта.
+\end{itemize}
+
+Итеративный расчёт вектора $\vect{u}$ заканчивается при выполнении следующего неравенства:
+\begin{equation*}
+    \left| J(\vect{u}_{k+1}) - J(\vect{u}_{k}) \right| < J_{end}
+\end{equation*}
+\noindent где $J_{end}$ -- настраиваемый параметр, который зависит от дискретности управления исполнительными механизмами ДРК.
+
+В случае если рассматривается задача не предусматривающая ограничений (т.е. $\mathspace{U} = \mathspace{R}$) или решение задачи оптимального управления укладывается в заданные ограничения, т.е. $\vect{u^*} \in \mathspace{U}$, то решение можно получить аналитически через частную производную от функционала $\frac{\partial J}{\partial u}$. Тогда вектор оптимального управления будет следующим:
+\begin{equation*}
+    \vect{u^*} = (1-\epsilon)\left[(1-\epsilon)(BK(v))^{-1}Q_{\nu}BK(v) + \epsilon Q_u\right](BK(v))^TQ_{\nu} \vect{\nu}_c
+\end{equation*}
+
+Общая структурная блок-схема работы алгоритма управления ДРК с учетом оценки скорости набегающего потока по математической модели маршевых движителей представлена на рисунке 4.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{allocation/Алгоритм - Блок-схема.png}
+    \caption*{Рис. 4 -- Общая блок-схема реализации алгоритма адаптивного управления ДРК.}
+    \label{fig:method_algorithm}
+\end{figure}
+
+В главе также проведён численный анализ эффективности представленного адаптивного метода управления ДРК на базе модели ДРК АНПА ``ММТ-300''\cite{борейко2019малогабаритный}.
+
+Кроме этого, было проведено сравнение предлагаемого адаптивного метода управления ДРК при различных вариациях скорости набегающего потока относительно того, который реализован в СУ на АНПА ``ММТ-3000'', который разработан в ИПМТ ДВО РАН.
+
+Результаты распределения упоров и формируемые при этом силы и моменты методом прямого управления ДРК с масштабированием реализованного в СУ АНПА ``ММТ-3000'' в диапазоне скоростей от 0 до 2.5 м/с представлены на рисунке 5.
+Аналогичные данные для предлагаемого адаптивного метода управления ДРК представлены на рисунке 6.
+
+\begin{figure}[ht]
+    \centerfloat{
+        \hfill
+        \subcaptionbox{Команды ИМ}{%
+            \includegraphics[width=0.5\linewidth]{allocation/Результат ММТ300 - Стандартный упоры.png}}
+        \hfill
+        \subcaptionbox{Сформированные силы и моменты}{%
+            \includegraphics[width=0.5\linewidth]{allocation/Результат ММТ300 - Стандартный силы.png}}
+        \hfill
+    }
+    \caption*{Рис. 5 -- Распределение упоров и сформированные при этом силы и моменты методом прямого управления ДРК с масштабированием.}\label{fig:latex}
+\end{figure}
+
+\begin{figure}[ht]
+    \centerfloat{
+        \hfill
+        \subcaptionbox{Команды ИМ}{%
+            \includegraphics[width=0.5\linewidth]{allocation/Результат ММТ300 - Адаптивный Упоры.png}}
+        \hfill
+        \subcaptionbox{Сформированные силы и моменты}{%
+            \includegraphics[width=0.5\linewidth]{allocation/Результат ММТ300 - Адаптивный силы.png}}
+        \hfill
+    }
+    \caption*{Рис. 5 -- Распределение упоров и сформированные при этом силы и моменты адаптивным методом управления ДРК.}\label{fig:latex}
+\end{figure}
 
 \FloatBarrier
 \pdfbookmark{Заключение}{conclusion}                                  % Закладка pdf
@@ -76,9 +237,6 @@
 \input{common/concl}
 
 \pdfbookmark{Литература}{bibliography}                                % Закладка pdf
-При использовании пакета \verb!biblatex! список публикаций автора по теме
-диссертации формируется в разделе <<\publications>>\ файла
-\verb!common/characteristic.tex!  при помощи команды \verb!\nocite!
 
 \ifdefmacro{\microtypesetup}{\microtypesetup{protrusion=false}}{} % не рекомендуется применять пакет микротипографики к автоматически генерируемому списку литературы
 \urlstyle{rm}                               % ссылки URL обычным шрифтом
@@ -94,28 +252,6 @@
     %  * Если цитировать каждый источник отдельной командой --- найти некоторые ошибки будет проще.
     %
     %% authorvak
-    \nocite{vakbib1}%
-    \nocite{vakbib2}%
-    %
-    %% authorwos
-    \nocite{wosbib1}%
-    %
-    %% authorscopus
-    \nocite{scbib1}%
-    %
-    %% authorpathent
-    \nocite{patbib1}%
-    %
-    %% authorprogram
-    \nocite{progbib1}%
-    %
-    %% authorconf
-    \nocite{confbib1}%
-    \nocite{confbib2}%
-    %
-    %% authorother
-    \nocite{bib1}%
-    \nocite{bib2}%
 
     \ifnumgreater{\value{usefootcite}}{0}{
         \begin{refcontext}[labelprefix={}]
