--- a/Synopsis/title.tex
+++ b/Synopsis/title.tex
@@ -124,9 +124,9 @@ r
     \defenseCouncilNumber,\par
     \defenseSecretaryRegalia
     &
-    \ifnumequal{\value{showsecrsign}}{0}{}{%
-        \includegraphics[width=2cm]{secretary-signature.png}%
-    }%
+    % \ifnumequal{\value{showsecrsign}}{0}{}{%
+    %     \includegraphics[width=2cm]{secretary-signature.png}%
+    % }%
     &
     \defenseSecretaryFio
 \end{tabularx}
