--- a/Synopsis/userstyles.tex
+++ b/Synopsis/userstyles.tex
@@ -1,1 +1,7 @@
 \newcommand\blank[1][\textwidth]{\noindent\rule[-.2ex]{#1}{.4pt}}
+
+% Красивая запись полужирного написания в math режиме
+\newcommand{\vect}[1]{\boldsymbol{#1}}
+
+% Красивая запись пространств 
+\newcommand{\mathspace}[1]{\mathbb{#1}}
