--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -1,7 +1,7 @@
 @article{костенко2020исследование,
   addendum = {(0,28~п.~л.; ВАК)},
   title={Исследование методов управления тягой маршевых движителей необитаемого подводного аппарата},
-  author={Костенко, Владимир Владимирович and Мокеева, Ирина Геннадьевна and Найденко, Николай Андреевич and Толстоногов, Антон Юрьевич},
+  author={Толстоногов, Антон Юрьевич and Костенко, Владимир Владимирович and Мокеева, Ирина Геннадьевна and Найденко, Николай Андреевич},
   journal={Известия Южного федерального университета. Технические науки},
   number={1 (211)},
   year={2020},
@@ -13,7 +13,7 @@
 @inproceedings{kostenko2021comparative,
   addendum = {(0,10~п.~л.; Scopus)},
   title={A comparative analysis of control allocation methods applied to autonomous underwater vehicles},
-  author={Kostenko, VV and Tolstonogov, A Yu},
+  author={Tolstonogov, A Yu and Kostenko, VV},
   booktitle={Journal of Physics: Conference Series},
   volume={1864},
   number={1},
@@ -26,7 +26,7 @@
 
 @inproceedings{костенко2020анализ,
   title={Анализ различных подходов к распределению управляющих воздействий подводного аппарата},
-  author={Костенко, ВВ and Толстоногов, АЮ},
+  author={Толстоногов, АЮ and Костенко, ВВ},
   booktitle={Материалы конференции {\guillemotleft}Управление в морских системах{\guillemotright}(УМС-2020). СПб.: АО {\guillemotleft}Кон-церн {\guillemotleft}ЦНИИ {\guillemotleft}Электроприбор{\guillemotright}, 2020. 200 с.},
   pages={64},
   language = {russian},
@@ -37,7 +37,7 @@
   addendum = {(0,10~п.~л.; ВАК)},
   title={Методы решения задачи распределения управляющих воздействий на исполнительные механизмы подводного аппарата: краткий обзор},
   author={Костенко, ВВ and Толстоногов, АЮ},
-  journal={подводные иссленые исследования подводные исследования},
+  journal={Подводные исследования и робототехника},
   pages={4},
   year={2020},
   language = {russian},
@@ -46,7 +46,7 @@
 
 @article{костенко2019разработка,
   title={Разработка и исследование математической модели маршевого движителя необитаемого подводного аппарата},
-  author={Костенко, ВВ and Михайлов, ДН and Стороженко, ВА and Толстоногов, АЮ},
+  author={Толстоногов, АЮ and Костенко, ВВ and Михайлов, ДН and Стороженко, ВА},
   journal={Технические проблемы освоения Мирового океана},
   number={8},
   pages={352--358},
