--- a/common/newnames.tex
+++ b/common/newnames.tex
@@ -4,7 +4,7 @@
 % 9.2.1 Общая характеристика работы включает в себя следующие основные структурные
 % элементы:
 % актуальность темы исследования;
-\newcommand{\actualityTXT}{Актуальность темы диссертации.}
+\newcommand{\actualityTXT}{Актуальность темы научно-квалификационной работы (диссертации).}
 % степень ее разработанности;
 \newcommand{\progressTXT}{Степень разработанности темы.}
 % Объект исследования
