--- a/dissertation.tex
+++ b/dissertation.tex
@@ -56,10 +56,11 @@
 \input{common/renames}
 
 %%% Структура диссертации (ГОСТ Р 7.0.11-2011, 4)
-\include{Dissertation/title}           % Титульный лист
+% \include{Dissertation/title}           % Титульный лист
+\includepdf[page={1,2}]{images/_title_report.pdf}
 \include{Dissertation/contents}        % Оглавление
-\ifnumequal{\value{contnumfig}}{1}{}{\counterwithout{figure}{chapter}}
-\ifnumequal{\value{contnumtab}}{1}{}{\counterwithout{table}{chapter}}
+% \ifnumequal{\value{contnumfig}}{1}{}{\counterwithout{figure}{chapter}}
+% \ifnumequal{\value{contnumtab}}{1}{}{\counterwithout{table}{chapter}}
 \include{Dissertation/introduction}    % Введение
 \ifnumequal{\value{contnumfig}}{1}{\counterwithout{figure}{chapter}
 }{\counterwithin{figure}{chapter}}
