--- a/synopsis.tex
+++ b/synopsis.tex
@@ -3,7 +3,9 @@
 
 % Откомментируйте, чтобы отключить генерацию закладок в pdf
 % \PassOptionsToPackage{bookmarks=false}{hyperref}
-\documentclass[a5paper,10pt,twoside,openany,article]{memoir} %,draft
+\documentclass[a4paper,14pt,oneside,openany]{memoir} %,draft
+
+\usepackage{indentfirst}
 
 \input{common/setup}          % общие настройки шаблона
 \input{common/packages}       % Пакеты общие для диссертации и автореферата
@@ -39,35 +41,36 @@
 
 \begin{document}
 
-\input{Synopsis/title}        % Титульный лист
+% \input{Synopsis/title}        % Титульный лист
+\includepdf[page={1,2}]{images/_title_report.pdf}
 %\mainmatter                   % В том числе начинает нумерацию страниц арабскими цифрами с единицы
 \mainmatter*                  % Нумерация страниц не изменится, но начнётся с новой страницы
 \input{Synopsis/content}      % Содержание автореферата
 
-%%% Выходные сведения типографии
-\newpage\thispagestyle{empty}
+% %%% Выходные сведения типографии
+% \newpage\thispagestyle{empty}
 
-\vspace*{0pt plus1fill}
+% \vspace*{0pt plus1fill}
 
-\small
-\begin{center}
-    \textit{\thesisAuthor}
-    \par\medskip
+% \small
+% \begin{center}
+%     \textit{\thesisAuthor}
+%     \par\medskip
 
-    \thesisTitle
-    \par\medskip
+%     \thesisTitle
+%     \par\medskip
 
-    Автореф. дис. на соискание ученой степени \thesisDegreeShort
-    \par\bigskip
+%     Автореф. дис. на соискание ученой степени \thesisDegreeShort
+%     \par\bigskip
 
-    Подписано в печать \blank[\widthof{999}].\blank[\widthof{999}].\blank[\widthof{99999}].
-    Заказ № \blank[\widthof{999999999999}]
+%     Подписано в печать \blank[\widthof{999}].\blank[\widthof{999}].\blank[\widthof{99999}].
+%     Заказ № \blank[\widthof{999999999999}]
 
-    Формат 60\(\times\)90/16. Усл. печ. л. 1. Тираж 100 экз.
-    %Это не совсем формат А5, но наиболее близкий, подробнее: http://ru.wikipedia.org/w/index.php?oldid=78976454
+%     Формат 60\(\times\)90/16. Усл. печ. л. 1. Тираж 100 экз.
+%     %Это не совсем формат А5, но наиболее близкий, подробнее: http://ru.wikipedia.org/w/index.php?oldid=78976454
 
-    Типография \blank[0.5\linewidth]
-\end{center}
-\cleardoublepage
+%     Типография \blank[0.5\linewidth]
+% \end{center}
+% \cleardoublepage
 
 \end{document}
